contour-test/test/weight.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: weight
  namespace: test
spec:
  virtualhost:
    fqdn: devtest.sanniolo.myinstance.com
  routes:
    - conditions:
      - prefix: /
      services:
        - name: httpd
          port: 80
          weight: 50
        - name: nginx
          port: 80
          weight: 10
